	+ Improved example names inside the ExampleLauncher. Renamed some examples to better reflect their contents.
	+ Added two new tutorials: 'T01: Simple Window' and 'T02: Resizable Window'
	+ Updated the DrawCube() immediate mode functions to use System.Drawing.Colors


OpenTK 0.3.9 -> 0.3.10

+ Bind
	+ Added Generator for WGL.
	+ Corrected bug where trimmed overloads (like Color3) did not call the correct delegates internally (Color3ub called glColor3b)
	+ Improved configuration capabilities - can now change the function prefix/postfix, and more.
	+ Improved commandline argument handling.

+ OpenTK
	+ Platform
		+ Added complete WGL bindings (Wgl.cs, WglCore.cs, WglDelegates.cs, WglEnums.cs)
		* Should request up-to-date specs from Khronos.
	+ GameWindow and GLControl
		+ Improved creation/destruction event sequence.
		+ Improved loading speed.
		+ Corrected long-standing stability issues (moving between GameWindow/GLControl examples no longer results in a crash)
		+ Improved compatibility (now works with Mesa3d 7.0.x as well as 6.5.x)
		+ Better error handling (although not completely safe by any measure).
		+ Corrected client rectangle under Windows GameWindow implementation - now the Viewport correctly corresponds the rendering area.
		* Critical bug: deadlock on Windows XP 32-bit. Investigating.
	+ Input
		+ Slightly improved keyboard handling functions.
	+ OpenGL
		+ Added convenience overloads for Color[34] that can directly take a System.Drawing.Color struct.

+ Examples
	+ Slight improvements to event handling.
	+ Improved the ExampleLauncher interface (now responds to key events, added a 'Run Example' button).

	
OpenTK 0.3.8 -> 0.3.9

+ Bind
	+ Does not rely on CodeDOM anymore (wasn't flexible enough).
		+ Initial work on gl3, wgl, glx, glu compatibility.
	+ Implemented almost all pending features:
		+ Extensions in different classes (e.g. GL.ARB.ActiveTexture)
		+ Fixed statement instead of GCHandle for improved performance